# 6620_1c_2017

./: .gitignore  CMakeLists.txt  README.md  Sorter.sh  TP0 - Informe.aux  TP0 - Informe.lof  TP0 - Informe.tex  TP0 - Informe.toc  Usar Gxemul  functionalTests.sh  main.c  sorters.c  sorters.h  testFile.txt
TP0/: CMakeLists.txt  README.md  TP0 - Informe.dvi  TP0 - Informe.out
TP0/TP0_Entrega/: functionalTests.sh
TP1/: MODIFICACION_ENUNCIADO  Readme (Interno)  Readme TP1.txt  run.sh  stack2.c
TP1/Entregable_TP1/: run.sh  stack3.c  stack4.c
TP1/OLD_stack5/: main5.c  stack5.c  stack5.h  win.c
TP1/informe/: main.tex  stack1.c
TP1/stack5 (updated)/: input.txt  stack5.c
TP2/: CMakeLists.txt  README_INTERNO  defines.h  main.cpp  moduleExecutor.cpp  moduleExecutor.h  parser.cpp  parser.h
TP2/informe/trabajo-practico-2/: main.tex
TP2/informe/trabajo-practico-2/modules/: blockSize.cpp  cacheSize.cpp
TP2/informe/trabajo-practico-2/source/: main.cpp  moduleExecutor.cpp  moduleExecutor.h  parser.cpp  parser.h
TP2/modules/blockSize/: main.cpp
TP2/modules/block_size_module/: CMakeLists.txt  main.cpp
TP2/modules/cacheAssociativity/: CMakeLists.txt  main.cpp
TP2/modules/cacheSize/: CMakeLists.txt  main.cpp
TP2/src/: CMakeLists.txt  defines.h  parser.cpp  parser.h
recursos/: VER.txt
